--- a/Activite.html
+++ b/Activite.html
@@ -44,12 +44,50 @@
             <div class="gridImg"><img src="./assets/images/slideshow/slide21.jpg" alt="Banner  asso"></div>
         </section>
     </div>
-    <div>
+   
         <h5>Nos Rendonnées</h5>
-        <article>
-            
-        </article>
-    </div>
+    <article>
+        <div id="services">
+			<div class="container">
+				<div class="service">
+					<div class="service__description">
+						<h3>Karthala</h3>
+						<p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace
+							en
+							Île-de-France pour réaliser vos photos
+						</p>
+					</div>
+					<div class="service__price">
+						<h4>350€/demi journée</h4>
+						<span>Matériel, déplacement inclus</span>
+					</div>
+
+				</div>
+				<div class="service">
+					<div class="service__description">
+						<h3>Ils de tortue</h3>
+						<p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un rendu
+							optimal pour vos publications
+						</p>
+					</div>
+					<div class="service__price">
+						<h4>50€/photo</h4>
+						<span>2 AR par photo</span>
+					</div>
+				</div>
+				<div class="service">
+					<div class="service__description">
+						<h3>Dos de dragon</h3>
+						<p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers la création d’album photo personnalisé</p>
+					</div>
+					<div class="service__price">
+						<h4>400€ album A4</h4>
+						<span>30 pages recto/verso</span>
+					</div>
+				</div>
+			</div>
+		</div> 
+    </article>
     <footer>
         <div>
             <p class="footer-contact">Contact</p>
