--- a/Activite.html
+++ b/Activite.html
@@ -58,7 +58,7 @@
 						</p>
 					</div>
 					<div class="service__price">
-						<h4>350€/demi journée</h4>
+						<h4>350€/Une semaine</h4>
 						<span>Matériel, déplacement inclus</span>
 					</div>
 
@@ -71,7 +71,7 @@
 						</p>
 					</div>
 					<div class="service__price">
-						<h4>50€/photo</h4>
+						<h4>50€/3 jours</h4>
 						<span>2 AR par photo</span>
 					</div>
 				</div>
@@ -81,7 +81,7 @@
 						<p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers la création d’album photo personnalisé</p>
 					</div>
 					<div class="service__price">
-						<h4>400€ album A4</h4>
+						<h4>400€/Mois</h4>
 						<span>30 pages recto/verso</span>
 					</div>
 				</div>
