--- a/Equipe.html
+++ b/Equipe.html
@@ -78,12 +78,12 @@
 						<p>
 							<i class="fa-solid fa-location-dot" aria-hidden="true"></i>
 							<span class="visually-hidden">Emplacement</span>
-							68 Avenue Alsace-Lorraine, 33200 Bordeaux
+							: Mbeni Hamahamet Comores
 						</p>
 						<p>
 							<i class="fa-solid fa-phone" aria-hidden="true"></i>
 							<span class="visually-hidden">Telephone</span>
-							05 56 67 78 89 (Du lundi au vendredi, de 10h à 19h)
+							05 xx xx 78 xx (Du lundi au vendredi, de 10h à 19h)
 						</p>
 						
 					</div>
