--- a/Equipe.html
+++ b/Equipe.html
@@ -83,7 +83,7 @@
 						<p>
 							<i class="fa-solid fa-phone" aria-hidden="true"></i>
 							<span class="visually-hidden">Telephone</span>
-							05 xx xx 78 xx (Du lundi au vendredi, de 10h à 19h)
+							:05 xx xx 78 xx (Du lundi au vendredi, de 10h à 19h)
 						</p>
 						
 					</div>
