--- a/Activite.html
+++ b/Activite.html
@@ -37,9 +37,15 @@
               </p>
            </article>
         </div>
-        <section class="grid">
-            <div class="gridImg"><img src="./assets/images/slideshow/c-falese.webp" alt="Banner  asso"></div>
-        </section>
+        <!-- <section>
+            <div class="slider">
+            <div class="slide active"><img src="./assets/images/slideshow/montagne.jfif" alt="Banner  asso"></div>
+            <div class="slide"><img src="./assets/images/slideshow/AnimalA.jfif" alt="Banner  asso"></div>
+            <div class="slide"><img src="./assets/images/slideshow/AnimalB.jfif" alt="Banner  asso"></div>
+            <div class="slide"><img src="./assets/images/slideshow/lac.jfif" alt="Banner  asso"></div>
+            <div class="slide"><img src="./assets/images/slideshow/ileau.jfif" alt="Banner  asso"></div>
+            <div class="slide"><img src="./assets/images/slideshow/iles.jfif" alt="Banner  asso"></div>
+        </section> -->
     </div>
    
         <h5>Nos Rendonnées</h5>
@@ -114,5 +120,6 @@
 				
 			</div>
 	</footer>
+	<script src="./assets/projet.js"></script>
 </body>
 </html>
