--- a/Activite.html
+++ b/Activite.html
@@ -33,9 +33,24 @@
               <p>
                 Comment faire, concrètement, pour protéger l’environnement ? Éléments de réponse avec ces gestes de la vie de tous les jours, qu’il est possible d’adopter au quotidien.
                 Privilégier les produits en vrac, ou dans de grands contenants, utiliser des sacs réutilisables, ne pas acheter d’eau en bouteille, éviter les produits jetables comme la vaisselle en plastique… Ce sont quelques-uns des petits gestes qui permettent de limiter sa production de déchets. Autres idées, recycler, et réutiliser certains produits. 
-                En achetant des produits de seconde main, par exemple
+                En achetant des produits de seconde main.
+
+				Nous avons tous besoin de forêts saines. Elles sont les poumons de notre planète.
+
+                 Seule la planète Terre renferme une forme de vie : Aors,
+
+                       Plantez des arbres indigènes dans votre cour ou communiquez avec une organisation locale qui recherche des bénévoles pour planter des arbres dans votre collectivité.
+                       Réduisez les déchets de produits du bois en passant à la facturation sans papier pour les services publics et les autres services.
+                        Donnez du temps ou de l’argent aux organisations qui aident à conserver les forêts ici au Canada et dans le monde entier.
               </p>
            </article>
+		   <article>
+			  <h4>Découverte des comores</h4>
+                <p>
+					Ce pays est une réserve naturelle où l’on retrouve de nombreuses plantes à parfum. Ainsi, l’ ylang-ylang, le jasmin, le combava, ou encore le patchouli viennent parfumer l’atmosphère.
+					Ces iles de l’ océan indien abritent des éléments à la beauté naturelle étonnante en raison de son insularité. Le taux d’endémisme de la flore et de la faune terrestres et marines est très élevé. C’est pourquoi, l’union des Comores place l’écotourisme au sommet de leurs priorités.
+				</p>
+		    </article>
         </div>
         <!-- <section>
             <div class="slider">
@@ -55,9 +70,8 @@
 				<div class="service">
 					<div class="service__description">
 						<h3>Karthala</h3>
-						<p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace
-							en
-							Île-de-France pour réaliser vos photos
+						<p>L'île de Grande Comore, il est entouré au nord par La Grille, un autre volcan qui a formé le nord de l'île de Grande Comore.
+                         Ce volcan bouclier de trente kilomètres de longueur et de quinze kilomètres de largeur culmine à 2 361 mètres d'altitude. Il se trouve à son sommet une caldeira de trois kilomètres de largeur sur quatre kilomètres de longueur.
 						</p>
 					</div>
 					<div class="service__price">
@@ -68,9 +82,8 @@
 				<div class="service">
 					<div class="service__description">
 						<h3>Ils de tortue</h3>
-						<p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un rendu
-							optimal pour vos publications
-						</p>
+						<p>Situé au nord-est de la Grande Comore, Ndroudé est  village de pêche traditionnelle.  Le développement du village s’appuie sur  surtout de la contribution conséquente de leur diaspora. Forts de leur solidarité, les ndroudéniens n’ont jamais aménagé leurs efforts depuis des lurettes pour développer le tourisme à travers leur site touristique.
+						</p> 
 					</div>
 					<div class="service__price">
 						<h4>50€/3 jours</h4>
@@ -78,8 +91,10 @@
 				</div>
 				<div class="service">
 					<div class="service__description">
-						<h3>Dos de dragon</h3>
-						<p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers la création d’album photo personnalisé</p>
+						<h3>Dos du dragon</h3>
+						<p>Le dos du dragon est une chaine de rochers située dans la ville d’Ivoini au nord de la Grande Comore, qui a pris avec le temps la forme surprenante d’un dragon.
+                           Les chercheurs pensent qu’il s’agit d’un ancien cratère volcanique qui a subit les dégâts de l’érosion.
+                           Entouré de deux plages, il offre une vue magnifique sur l’îlot de Ndrude. Le dos du dragon reste l’un des plus belles merveilles touristiques des Comores.</p>
 					</div>
 					<div class="service__price">
 						<h4>400€/Mois</h4>
