--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
             <div class="directionRow">
                 <article>
                     <h3>Promouvoir</h3>
-                    <p>L'asso regroupe des passionnés de glisse et plus particulièrement de skateboard qui œuvrent pour la promotion de ce sport au niveau régional.</p>
+                    <p>Notre asso encourage la demande touristique désaisonnalisée et les séjours prolongés. Sensibiliser le tissu entrepreneurial du Delta de l'Èbre sur l'importance de développer des modèles commerciaux basés sur le tourisme durable afin de contribuer à la préservation du Delta comme espace naturel protégé.</p>
                 </article>
                 <article>
                     <h3>Transmettre</h3>
-                    <p>Nous proposons des cours pour enfants, ados et adultes. Nous intervenons également dans les écoles pour faire découvrir le skate aux plus jeunes.</p>
+                    <p>Nous développons des produits et des séjours écotouristiques mettant en valeur les savoir-faire et les particularités du territoire, Promouvoir les membres du réseau et les produits développés auprès des clientèles intéressées par l'écotourisme.</p>
                 </article>
                 <article>
-                    <h3>Fédérer</h3>
-                    <p>L'asso organise tout au long de l'année des évènements autour du skate pour réunir toujours plus de monde autour de cette pratique.</p>
+                    <h3>Avantage</h3>
+                    <p>Les avantage de notre Asso est d'encourager les voyageurs et les entreprises opérant dans le industrie du tourisme devenir plus attentifs à la nature et plus engagés à adopter des comportements durables et utiles qui peuvent limiter les dommages causés par les activités touristiques.</p>
                 </article>
             </div>
         </section>
