--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <div class="slide"><img src="./assets/images/slideshow/plagepp.jpg" alt="Banner  asso"></div>
             <div class="slide"><img src="./assets/images/slideshow/slide12.jpg" alt="Banner  asso"></div>
             <div class="slide"><img src="./assets/images/slideshow/slide16.webp" alt="Banner  asso"></div>
+            <div class="slide"><img src="./assets/images/slideshow/ile-tortue.webp" alt="Banner  asso"></div>
         </div>
     </section>
     <main>
