--- a/Activite.html
+++ b/Activite.html
@@ -107,7 +107,7 @@
 			<div class="container">
 				<div class="form-container">
 					<h2>Une question ? Une demande de devis ?</h2>
-					<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
+					<p> N’hésitez pas à m’écrire !</p>
 					<form action="traitement.php" method="post">
 						<label for="nom">Nom</label>
 						<input type="text" name="nom" id="nom">
