--- a/Activite.html
+++ b/Activite.html
@@ -16,7 +16,7 @@
             <img src="./assets/images/marmit.jpg" alt="la marmite logo">
         </a>
         <div>
-            <div style="background-image: url('./assets/images/slideshow/falese2.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; width: 90vw; height: 20vh;"></div>
+            <div style="background-image: url('./assets/images/slideshow/falese2.jpg'); display: none; background-size: cover; background-position: center; background-repeat: no-repeat; width: 90vw; height: 20vh;"></div>
         </div>
     </header>
     <div class="background">
