--- a/Equipe.html
+++ b/Equipe.html
@@ -16,7 +16,7 @@
             <img src="./assets/images/marmit.jpg" alt="la marmite logo">
         </a>
         <div>
-            <div style="background-image: url('./assets/images/slideshow/plagepp.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; width: 90vw; height: 20vh;"></div>
+            <div style="background-image: url('./assets/images/slideshow/plagepp.jpg');display: none; background-size: cover; background-position: center; background-repeat: no-repeat; width: 90vw; height: 20vh;"></div>
         </div>
     </header>
     <div class="background">
@@ -42,7 +42,7 @@
         <h1>equipe</h1>
         <section>						
             <div class="whiteContentSection">
-                <h2>les membres fondateurs</h2>	
+                <h2>les membres de l'Association</h2>	
                 <div class="directionRow">
                    <figure>									
                     <img src="./assets/images/Zack.jpg" alt="homme en chemise">		
