--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <header>
         <img src="./assets/images/marmit.jpg" alt="la marmite logo">
         <div class="bordhead">
+            <div> 
+                <a href="" target="_blank">
+                  <i class="fa fa-instagram"></i>
+                </a>
+            </div>
            <div class="deadbar"><a href="Equipe.html">Equipe</a></div>
            <div class="deadbars"><a href="Activite.html">Activités</a></div>
         </div>
