--- a/Equipe.html
+++ b/Equipe.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
@@ -63,7 +64,7 @@
 			<div class="container">
 				<div class="form-container">
 					<h2>Une question ? Une demande de devis ?</h2>
-					<p> N’hésitez pas à m’écrire !</p>
+					<p> N’hésitez pas à nous écrire !</p>
 					<form action="traitement.php" method="post">
 						<label for="nom">Nom</label>
 						<input type="text" name="nom" id="nom">
@@ -85,7 +86,12 @@
 							<span class="visually-hidden">Telephone</span>
 							:05 xx xx 78 xx (Du lundi au vendredi, de 10h à 19h)
 						</p>
-						
+						<div>
+                            <a href="https://www.instagram.com/lamarmitededemain?igsh=d2lsMTEwNXd5bWNx" target="_blank"> 
+                                <i class="fa-brands fa-square-instagram"></i>
+                                <span class="visually-hidden">Instagram</span>
+                            </a>
+                        </div>
 					</div>
 				</div>
 				
