--- a/index.html
+++ b/index.html
@@ -15,11 +15,6 @@
     <header>
         <img src="./assets/images/marmit.jpg" alt="la marmite logo">
         <div class="bordhead">
-            <div>
-                <a href="" target="_blank"> 
-                   <i class="fa-brands fa-square-instagram"></i>
-                </a>
-            </div>
            <div class="deadbar"><a href="Equipe.html">Equipe</a></div>
            <div class="deadbars"><a href="Activite.html">Activités</a></div>
         </div>
@@ -138,7 +133,12 @@
 							<span class="visually-hidden">Telephone</span>
 							:05 xx xx 78 xx (Du lundi au vendredi, de 10h à 19h)
 						</p>
-						
+						<div>
+                            <a href="https://www.instagram.com/lamarmitededemain?igsh=d2lsMTEwNXd5bWNx" target="_blank"> 
+                                <i class="fa-brands fa-square-instagram"></i>
+                                <span class="visually-hidden">Instagram</span>
+                            </a>
+                        </div>
 					</div>
 				</div>
 				
