--- a/Equipe.html
+++ b/Equipe.html
@@ -47,15 +47,19 @@
                 <div class="directionRow">
                    <figure>									
                     <img src="./assets/images/Zack.jpg" alt="homme en chemise">		
-                    <figcaption><div class="directionColumn"><h3>Zack</h3><p>moi</p></div></figcaption></figure>
+                    <figcaption><div class="directionColumn"><h3>Zack</h3><p>Conseiller</p></div></figcaption></figure>
                    <figure>
                     <img src="./assets/images/Medhadji.jpg" alt="homme propre">
-                    <figcaption><div class="directionColumn"><h3>Med hadji</h3><p>lui</p></div></figcaption>
+                    <figcaption><div class="directionColumn"><h3>Med HADJI</h3><p>Conseiller</p></div></figcaption>
                    </figure>	
                     <figure>									
                     <img src="./assets/images/hambali.jpg" alt="homme ">
                     <figcaption><div class="directionColumn"><h3>hambali</h3><p>Présidant</p></div></figcaption>
-                    </figure>						  
+                    </figure>	
+                    <figure>									
+                    <img src="./assets/images/Sg.jpg" alt="homme ">
+                    <figcaption><div class="directionColumn"><h3>Med BASTOI</h3><p>SG</p></div></figcaption>
+                    </figure>					  
                 </div>	
             </div>	
         </section>	
