--- a/Activite.html
+++ b/Activite.html
@@ -16,9 +16,6 @@
         <a href="index.html">
             <img src="./assets/images/marmit.jpg" alt="la marmite logo">
         </a>
-        <div>
-            <div style="background-image: url('./assets/images/slideshow/falese2.jpg'); display: none; background-size: cover; background-position: center; background-repeat: no-repeat; width: 90vw; height: 20vh;"></div>
-        </div>
     </header>
     <div class="background">
         <h1>Nos mission</h1>
@@ -53,15 +50,32 @@
 				</p>
 		    </article>
         </div>
-        <!-- <section>
-            <div class="slider">
-            <div class="slide active"><img src="./assets/images/slideshow/montagne.jfif" alt="Banner  asso"></div>
-            <div class="slide"><img src="./assets/images/slideshow/AnimalA.jfif" alt="Banner  asso"></div>
-            <div class="slide"><img src="./assets/images/slideshow/AnimalB.jfif" alt="Banner  asso"></div>
-            <div class="slide"><img src="./assets/images/slideshow/lac.jfif" alt="Banner  asso"></div>
-            <div class="slide"><img src="./assets/images/slideshow/ileau.jfif" alt="Banner  asso"></div>
-            <div class="slide"><img src="./assets/images/slideshow/iles.jfif" alt="Banner  asso"></div>
-        </section> -->
+        <div class="cards">
+        <div class="cardImage">
+            <img src="./assets/images/comtrou.jpg" alt="homme ">  
+        </div>
+        <div class="cardImage">
+           <img src="./assets/images/slideshow/montagne.jfif" alt="homme ">  
+        </div>
+        <div class="cardImage">
+           <img src="./assets/images/postheade.jpg" alt="homme ">  
+        </div>
+        <div class="cardImage">
+           <img src="./assets/images/comores-marche-femme.jpg" alt="homme ">  
+        </div>
+        <div class="cardImage">
+           <img src="./assets/images/slideshow/AnimalB.jfif" alt="homme ">  
+        </div>
+        <div class="cardImage">
+           <img src="./assets/images/slideshow/slide19.jpg" alt="homme ">  
+        </div>
+		<div class="cardImage">
+           <img src="./assets/images/slideshow/poisonlgd.jfif" alt="homme ">  
+        </div>
+		<div class="cardImage">
+           <img src="./assets/images/slideshow/lac.jfif" alt="homme ">  
+        </div>
+    </div>
     </div>
    
         <h5>Nos Rendonnées</h5>
@@ -76,7 +90,7 @@
 						</p>
 					</div>
 					<div class="service__price">
-						<h4>350€/Une semaine</h4>
+						<h4>30€/jour</h4>
 					</div>
 
 				</div>
@@ -87,7 +101,7 @@
 						</p> 
 					</div>
 					<div class="service__price">
-						<h4>50€/3 jours</h4>
+						<h4>20€/jour</h4>
 					</div>
 				</div>
 				<div class="service">
@@ -98,7 +112,7 @@
                            Entouré de deux plages, il offre une vue magnifique sur l’îlot de Ndrude. Le dos du dragon reste l’un des plus belles merveilles touristiques des Comores.</p>
 					</div>
 					<div class="service__price">
-						<h4>400€/Mois</h4>
+						<h4>30€/jour</h4>
 					</div>
 				</div>
 			</div>
