--- a/Equipe.html
+++ b/Equipe.html
@@ -16,9 +16,7 @@
         <a href="index.html">
             <img src="./assets/images/marmit.jpg" alt="la marmite logo">
         </a>
-        <div>
-            <div style="background-image: url('./assets/images/slideshow/plagepp.jpg');display: flex; background-size: cover; background-position: center; background-repeat: no-repeat; width: 90vw; height: 20vh;"></div>
-        </div>
+
     </header>
     <div class="background">
         <h1>Notre Association</h1>
@@ -54,7 +52,7 @@
                    </figure>	
                     <figure>									
                     <img src="./assets/images/hambali.jpg" alt="homme ">
-                    <figcaption><div class="directionColumn"><h3>hambali</h3><p>Présidant</p></div></figcaption>
+                    <figcaption><div class="directionColumn"><h3>Hambali</h3><p>Présidant</p></div></figcaption>
                     </figure>	
                     <figure>									
                     <img src="./assets/images/Sg.jpg" alt="homme ">
