--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
             <div class="slide"><img src="./assets/images/slideshow/slide12.jpg" alt="Banner  asso"></div>
             <div class="slide"><img src="./assets/images/slideshow/slide16.webp" alt="Banner  asso"></div>
             <div class="slide"><img src="./assets/images/slideshow/ile-tortue.webp" alt="Banner  asso"></div>
+            <div class="slide"><img src="./assets/images/slideshow/peche-Comores-013.jpg" alt="Banner  asso"></div>
+             <div class="slide"><img src="./assets/images/slideshow/c-vanille.webp" alt="Banner  asso"></div>
         </div>
     </section>
     <main>
