--- a/Equipe.html
+++ b/Equipe.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet">
+     <!-- Favicon -->
+    <link rel="shortcut icon" href="./assets/images/marmit.jpg" type="image/x-icon">
     <title>Equipe</title>
 </head>
 <body>
@@ -16,7 +18,7 @@
         <a href="index.html">
             <img src="./assets/images/marmit.jpg" alt="la marmite logo">
         </a>
-
+        
     </header>
     <div class="background">
         <h1>Notre Association</h1>
