--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet">
+     <!-- Favicon -->
+      <link rel="shortcut icon" href="./assets/images/marmit.jpg" type="image/x-icon">
     <title>Marmite de demain</title>
 </head>
 <body>
