--- a/Activite.html
+++ b/Activite.html
@@ -18,6 +18,10 @@
         <a href="index.html">
             <img src="./assets/images/marmit.jpg" alt="la marmite logo">
         </a>
+        <div class="bordhead">
+           <div class="deadbar"><a href="Equipe.html">Equipe</a></div>
+           <div class="deadbars"><a href="Activite.html">Activités</a></div>
+        </div>
     </header>
     <div class="background">
         <h1>Nos mission</h1>
@@ -52,32 +56,44 @@
 				</p>
 		    </article>
         </div>
-        <div class="cards">
-        <div class="cardImage">
+        <div class="cardsl">
+          <div class="cardImagel">
             <img src="./assets/images/comtrou.jpg" alt="homme ">  
-        </div>
-        <div class="cardImage">
+          </div>
+          <div class="cardImagel">
            <img src="./assets/images/slideshow/montagne.jfif" alt="homme ">  
-        </div>
-        <div class="cardImage">
+          </div>
+          <div class="cardImagel">
            <img src="./assets/images/postheade.jpg" alt="homme ">  
-        </div>
-        <div class="cardImage">
+          </div>
+          <div class="cardImagel">
            <img src="./assets/images/comores-marche-femme.jpg" alt="homme ">  
-        </div>
-        <div class="cardImage">
+          </div>
+          <div class="cardImagel">
            <img src="./assets/images/slideshow/AnimalB.jfif" alt="homme ">  
-        </div>
-        <div class="cardImage">
+          </div>
+          <div class="cardImagel">
            <img src="./assets/images/slideshow/slide19.jpg" alt="homme ">  
-        </div>
-		<div class="cardImage">
+          </div>
+		  <div class="cardImagel">
            <img src="./assets/images/slideshow/poisonlgd.jfif" alt="homme ">  
-        </div>
-		<div class="cardImage">
+          </div>
+		  <div class="cardImagel">
            <img src="./assets/images/slideshow/lac.jfif" alt="homme ">  
+          </div>
+          <div class="cardImagel">
+           <img src="./assets/images/slideshow/jasmine.jfif" alt="homme ">  
+          </div>
+          <div class="cardImagel">
+           <img src="./assets/images/slideshow/vanilcom.jfif" alt="homme ">  
+          </div>
+          <div class="cardImagel">
+           <img src="./assets/images/slideshow/yilang.jfif" alt="homme ">  
+          </div>
+          <div class="cardImagel">
+           <img src="./assets/images/slideshow/font-marin.jpg" alt="homme ">  
+          </div>
         </div>
-    </div>
     </div>
    
         <h5>Nos Rendonnées</h5>
