--- a/Equipe.html
+++ b/Equipe.html
@@ -18,7 +18,10 @@
         <a href="index.html">
             <img src="./assets/images/marmit.jpg" alt="la marmite logo">
         </a>
-        
+        <div class="bordhead">
+           <div class="deadbar"><a href="Equipe.html">Equipe</a></div>
+           <div class="deadbars"><a href="Activite.html">Activités</a></div>
+        </div>
     </header>
     <div class="background">
         <h1>Notre Association</h1>
